--- a/public/contact.html
+++ b/public/contact.html
@@ -6,8 +6,5 @@
 
 <p>Address:</p>
 <p>
-  340 South Street <br />
-  Apt 14 <br />
-  Morristown<br />
-  NJ, 07960 <br />
+  Morristown, NJ<br />
 </p>
